--- a/src/app/components/image/image.css
+++ b/src/app/components/image/image.css
@@ -1,3 +1,5 @@
-img{
-    max-width: 100%;
+
+.image{
+    width: 100%;
+    height: 100%;
 }
